static_href , lang-exclusive, polyglot 1.4.0 prep (#126)
* wip

* rubocop works again

* preparing 1.3.5, ready for further testing

* tweaks to how the regexes are called

* tweaky tweaky

* Static_Href tag is working nicely

* mild file renaming and additional tag exposure

* Sun Jan 31 17:53:41 MST 2021

* Sun Jan 31 17:56:49 MST 2021

* polyglot 1.4.0 blog posts

* support and tests for lang-exclusive

* readme and gem version bumps

* no .jekyll-cache, no layout

* lang-exclusive promo, prep v1.4.0

* dont commit that

* final touchups

* jekyll build

* will this build in .circleci correctly?

* pppfff

* commit the gemfile.lock

* add test group rspec support

* update the spec

* pages rebuilt, posts added

--- a/es/a-really-long/permalink/index.html
+++ b/es/a-really-long/permalink/index.html
@@ -100,19 +100,20 @@
 
       <a class="sidebar-nav-item" href="https://rubygems.org/gems/jekyll-polyglot">Ruby Gem</a>
       <a class="sidebar-nav-item" href="https://github.com/untra/polyglot">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v1.3.3</span>
+      <span class="sidebar-nav-item">Currently v1.4.0</span>
     </nav>
 
-    <p>&copy; 2020 Samuel Volin, MIT Licensed</p>
+    <p>&copy; 2021 Samuel Volin, MIT Licensed</p>
 <p>
+  <!-- jekyll-polyglot will process ferh= into href= through the static_href liquid block tag without relativizing the url; useful for making language navigation switchers  -->
   
-<a  href=" /a-really-long/permalink/ ">en</a> |
+<a  href="/a-really-long/permalink/" >en</a> |
   
-<a style="font-weight: bold;" href=" /es/a-really-long/permalink/ ">es</a> |
+<a style="font-weight: bold;" href="/es/a-really-long/permalink/" >es</a> |
   
-<a  href=" /de/a-really-long/permalink/ ">de</a> |
+<a  href="/de/a-really-long/permalink/" >de</a> |
   
-<a  href=" /fr/a-really-long/permalink/ ">fr</a> |
+<a  href="/fr/a-really-long/permalink/" >fr</a> |
   
 </p>
   </div>
