--- a/de/about/index.html
+++ b/de/about/index.html
@@ -100,19 +100,20 @@
 
       <a class="sidebar-nav-item" href="https://rubygems.org/gems/jekyll-polyglot">Ruby Gem</a>
       <a class="sidebar-nav-item" href="https://github.com/untra/polyglot">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v1.3.3</span>
+      <span class="sidebar-nav-item">Currently v1.4.0</span>
     </nav>
 
-    <p>&copy; 2020 Samuel Volin, MIT Licensed</p>
+    <p>&copy; 2021 Samuel Volin, MIT Licensed</p>
 <p>
+  <!-- jekyll-polyglot will process ferh= into href= through the static_href liquid block tag without relativizing the url; useful for making language navigation switchers  -->
   
-<a  href=" /about/ ">en</a> |
+<a  href="/about/" >en</a> |
   
-<a  href=" /es/about/ ">es</a> |
+<a  href="/es/about/" >es</a> |
   
-<a style="font-weight: bold;" href=" /de/about/ ">de</a> |
+<a style="font-weight: bold;" href="/de/about/" >de</a> |
   
-<a  href=" /fr/about/ ">fr</a> |
+<a  href="/fr/about/" >fr</a> |
   
 </p>
   </div>
