--- a/es/about/index.html
+++ b/es/about/index.html
@@ -11,6 +11,7 @@
 <link rel="alternate" hreflang="es" href="https://polyglot.untra.io/es/about/"/>
 <link rel="alternate" hreflang="de" href="https://polyglot.untra.io/de/about/"/>
 <link rel="alternate" hreflang="fr" href="https://polyglot.untra.io/fr/about/"/>
+<link rel="alternate" hreflang="ru" href="https://polyglot.untra.io/ru/about/"/>
 
   <title>
     
@@ -103,7 +104,7 @@
       <span class="sidebar-nav-item">Currently v1.4.0</span>
     </nav>
 
-    <p>&copy; 2021 Samuel Volin, MIT Licensed</p>
+    <p>&copy; 2021 Samuel Volin<br/>MIT Licensed</p>
 <p>
   <!-- jekyll-polyglot will process ferh= into href= through the static_href liquid block tag without relativizing the url; useful for making language navigation switchers  -->
   
@@ -114,6 +115,8 @@
 <a  href="/de/about/" >de</a> |
   
 <a  href="/fr/about/" >fr</a> |
+  
+<a  href="/ru/about/" >ru</a> |
   
 </p>
   </div>
