--- a/fr/sample/index.html
+++ b/fr/sample/index.html
@@ -11,6 +11,7 @@
 <link rel="alternate" hreflang="es" href="https://polyglot.untra.io/es/sample/"/>
 <link rel="alternate" hreflang="de" href="https://polyglot.untra.io/de/sample/"/>
 <link rel="alternate" hreflang="fr" href="https://polyglot.untra.io/fr/sample/"/>
+<link rel="alternate" hreflang="ru" href="https://polyglot.untra.io/ru/sample/"/>
 
   <title>
     
@@ -103,7 +104,7 @@
       <span class="sidebar-nav-item">Currently v1.4.0</span>
     </nav>
 
-    <p>&copy; 2021 Samuel Volin, MIT Licensed</p>
+    <p>&copy; 2021 Samuel Volin<br/>MIT Licensed</p>
 <p>
   <!-- jekyll-polyglot will process ferh= into href= through the static_href liquid block tag without relativizing the url; useful for making language navigation switchers  -->
   
@@ -115,6 +116,8 @@
   
 <a style="font-weight: bold;" href="/fr/sample/" >fr</a> |
   
+<a  href="/ru/sample/" >ru</a> |
+  
 </p>
   </div>
 </div>
@@ -124,8 +127,8 @@
       <div class="page">
   <h1 class="page-title">Sample rich text data</h1>
   <p>bonjour, et bienvenue à une page d’exemple <br />
- profiter de votre séjour <br />
- Ce texte de l’échantillon provenait d’un fichier .yml <br />
+ s’il vous plaît profiter de votre séjour <br />
+ Cet exemple de texte provient d’un fichier .yml dans le répertoire _data <br />
  balises html sont <i>conservées</i> <br />
  et les liens sont <a href="/fr/">relativisées</a><br /></p>
 
