--- a/sample/index.html
+++ b/sample/index.html
@@ -11,6 +11,7 @@
 <link rel="alternate" hreflang="es" href="https://polyglot.untra.io/es/sample/"/>
 <link rel="alternate" hreflang="de" href="https://polyglot.untra.io/de/sample/"/>
 <link rel="alternate" hreflang="fr" href="https://polyglot.untra.io/fr/sample/"/>
+<link rel="alternate" hreflang="ru" href="https://polyglot.untra.io/ru/sample/"/>
 
   <title>
     
@@ -103,7 +104,7 @@
       <span class="sidebar-nav-item">Currently v1.4.0</span>
     </nav>
 
-    <p>&copy; 2021 Samuel Volin, MIT Licensed</p>
+    <p>&copy; 2021 Samuel Volin<br/>MIT Licensed</p>
 <p>
   <!-- jekyll-polyglot will process ferh= into href= through the static_href liquid block tag without relativizing the url; useful for making language navigation switchers  -->
   
@@ -115,6 +116,8 @@
   
 <a  href="/fr/sample/" >fr</a> |
   
+<a  href="/ru/sample/" >ru</a> |
+  
 </p>
   </div>
 </div>
@@ -124,8 +127,8 @@
       <div class="page">
   <h1 class="page-title">Sample rich text data</h1>
   <p>hello, and welcome to a sample page<br />
-enjoy your stay<br />
-This sample text came from a .yml file<br />
+please enjoy your stay<br />
+This sample text came from a .yml file in the _data directory<br />
 html tags are <i>preserved</i><br />
 and links are <a href="/">relativized</a><br /></p>
 
